updated ux/ui and and project layout
commit baseline updated: ui, projects thumbs with flex

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <div class="grid-x">
+<div class="grid-x grid-padding-x">
     <div class="medium-6 large-4 cell">
       <h3>Building in Southern California since 1998</h3></div>
     <div class="medium-6 large-8 cell">
@@ -44,7 +44,7 @@
 
 <!-- services -->
 <section id="services" data-magellan-target="services">
-  <div class="grid-x">
+<div class="grid-x grid-margin-x">
     <div class="medium-12 cell">
       <h3 class="text-center">Our Services</h3>
       <hr>
@@ -52,20 +52,22 @@
     </div>
   </div>
 <br>
-  <div class="grid-x">
+
+<div class="grid-x grid-padding-x">
     <div class="medium-4 cell">
-      <h3>Commercial</h3>
+      <h3 class="text-center">Commercial</h3>
         <p>Our portfolio of projects structures us as a leader in the hospitality industry. Our services include place and finish, formwork, foundations and total package solutions. With our ability to mobilize quickly and go wherever the project demands, our clients recognize our ability to exceed expectation and earn their repeat business..</p>
     </div>
     <div class="medium-4 cell">
-      <h3>Multi-Family Residential</h3>
+      <h3 class="text-center">Multi-Family Residential</h3>
         <p>Our reputation for meeting the aggressive schedules of this market helps us transform new projects into revenue-generating spaces. We are experienced in providing various levels of service, from foundation packages to total package services. Our intensive knowledge of formwork systems allows for the most cost-effective construction planning, engineering options and design/build services in the market.</p>
     </div>
     <div class="medium-4 cell">
-      <h3>Institutional</h3>
+      <h3 class="text-center">Institutional</h3>
         <p>We have experience in healthcare facilities, including hospitals, laboratories, specialized facilities and nursing homes. With many projects revolving around active facilities, TJC completes each job with a focused dedication to safety, job quality and on-time scheduling. TJC comes prepared to each project to ensure a timely and efficient turn-around for our clients to continue serving our communities.</p>
     </div>
   </div>
+
 </section>
 
 <!-- why us -->
@@ -77,32 +79,32 @@
     </div>
   </div>
 
-  <div class="grid-x">
+<div class="grid-x grid-padding-x">
     <div class="medium-4 cell">
-      <h3>Why Us</h3>
+      <h3 class="text-center">Why Us?</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
-      <h3>Right Tools</h3>
+      <h3 class="text-center">Right Tools</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
-      <h3>Expert Know How</h3>
+      <h3 class="text-center">Expert Know How</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
   </div>
 
-  <div class="grid-x">
+  <div class="grid-x grid-padding-x">
     <div class="medium-4 cell">
-      <h3>45 Years Experience</h3>
+      <h3 class="text-center">45 Years Experience</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
-      <h3>Industry Certified</h3>
+    <h3 class="text-center">Industry Certified</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
-      <h3>Good Business Practice</h3>
+    <h3 class="text-center">Good Business</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
   </div>
@@ -129,7 +131,7 @@
             <div>
               <h3>The Vue on 5th</h3>
             </div>
-            <a href="project1_thevue.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+            <a href="project1_thevue.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -141,7 +143,7 @@
             <div>
               <h3 class="text-center">Town & Country Hotel</h3>
             </div>
-            <a href="project2_tc.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+            <a href="project2_tc.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -153,7 +155,7 @@
             <div>
               <h3>Broadstone Little Italy</h3>
             </div>
-            <a href="project3_broad.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+            <a href="project3_broad.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -166,7 +168,7 @@
               <h3>Vista Medical Clinic</h3>
 
             </div>
-            <a href="project4_vista.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+            <a href="project4_vista.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
           </div>
         </div>
       </div>
@@ -181,7 +183,7 @@
               <div>
                 <h3>Water of Life Church</h3>
               </div>
-              <a href="project5_water.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+              <a href="project5_water.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
             </div>
           </div>
         </div>
@@ -193,7 +195,7 @@
               <div>
                 <h3 class="text-center">Military Fitness</h3>
               </div>
-              <a href="project6_military.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+              <a href="project6_military.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
             </div>
           </div>
         </div>
@@ -205,7 +207,7 @@
               <div>
                 <h3>Pacific Station</h3>
               </div>
-              <a href="project7_pac.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+              <a href="project7_pac.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
             </div>
           </div>
         </div>
@@ -217,7 +219,7 @@
               <div>
                 <h3>Project 8</h3>
               </div>
-              <a href="project8.html" target="_blank" class="button float-right">Project <span><i class="fa fa-plus"></i></span></a>
+              <a href="project8.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
             </div>
           </div>
         </div>
@@ -264,7 +266,7 @@
     </div>
   </div>
 
-  <div class="grid-x">
+<div class="grid-x grid-padding-x">
     <div class="medium-12 large-12 cell">
       <div class="media-object stack-for-small">
         <div class="media-object-section">
