--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -31,28 +31,23 @@
   </div>
 </div>
 
-<br>
-<!-- lightbox image area -->
 
-<div class="grid-x grid-padding-x small-up-2 medium-up-6 large-up-6">
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-
+<!-- lightbox thumb area with modal open 4 image thumbnail row-->
+<div class="project-thumbs">
+  <div class="grid-container fluid">
+    <div class="grid-x grid-margin-x">
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+    </div>
 </div>
+</div>
+
 <!-- Project Description and Overview -->
 <section class="project">
 
-  <div class="grid-x">
+  <div class="grid-x grid-padding-x">
     <div class="medium-6 large-4 cell">
       <div class="project-spec">
 
