--- a/src/pages/project7_pac.html
+++ b/src/pages/project7_pac.html
@@ -31,22 +31,17 @@
   </div>
 </div>
 
-<!-- lightbox image area -->
 
-<div class="grid-x grid-padding-x small-up-2 medium-up-6 large-up-6">
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-  <div class="cell"><img src="https://placehold.it/171x85" class="thumbnail" alt="">
-  </div>
-
+<!-- lightbox thumb area with modal open 4 image thumbnail row-->
+<div class="project-thumbs">
+  <div class="grid-container fluid">
+    <div class="grid-x grid-margin-x">
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+    </div>
+</div>
 </div>
 
 <!-- Project Description and Overview -->
