--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -114,118 +114,8 @@
 
 <section id="projects" data-magellan-target="projects">
 
-  <div id="current-p">
+  {{> main-page-gallery }}
 
-    <div class="grid-x">
-      <div class="medium-12 cell">
-        <h3 class="text-center">Current Projects</h3>
-        <hr>
-      </div>
-    </div>
-
-    <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
-      <div class="cell">
-        <div class="cptn03">
-          <img src="../assets/img/vuelink.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <div>
-              <h3>The Vue on 5th</h3>
-            </div>
-            <a href="project1_thevue.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="cell">
-        <div class="cptn03">
-          <img src="../assets/img/tc-link.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <div>
-              <h3 class="text-center">Town & Country Hotel</h3>
-            </div>
-            <a href="project2_tc.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="cell">
-        <div class="cptn03">
-          <img src="../assets/img/broadstone-link.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <div>
-              <h3>Broadstone Little Italy</h3>
-            </div>
-            <a href="project3_broad.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="cell">
-        <div class="cptn03">
-          <img src="../assets/img/vista-link.jpg" class="thumbnail" alt="">
-          <div class="cptn">
-            <div>
-              <h3>Vista Medical Clinic</h3>
-
-            </div>
-            <a href="project4_vista.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Projects 2nd Row-->
-
-      <div class="grid-x margin-collapse small-up-1 medium-up-2 large-up-4 ">
-        <div class="cell">
-          <div class="cptn03">
-            <img src="../assets/img/church-link.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <div>
-                <h3>Water of Life Church</h3>
-              </div>
-              <a href="project5_water.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="cell">
-          <div class="cptn03">
-            <img src="../assets/img/military-link.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <div>
-                <h3 class="text-center">Military Fitness</h3>
-              </div>
-              <a href="project6_military.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="cell">
-          <div class="cptn03">
-            <img src="../assets/img/3.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <div>
-                <h3>Pacific Station</h3>
-              </div>
-              <a href="project7_pac.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="cell">
-          <div class="cptn03">
-            <img src="../assets/img/1.jpg" class="thumbnail" alt="">
-            <div class="cptn">
-              <div>
-                <h3>Project 8</h3>
-              </div>
-              <a href="project8.html" target="_blank" class="button float-right">Project <span><i class="fa fa-arrow-circle-right"></i></span></a>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
 </section>
 <!-- End Projects Section-->
 
