update port and ui
update port and ui

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -156,34 +156,34 @@
     </div>
   </div>
 
-<div class="grid-x grid-padding-x">
-    <div class="medium-12 large-12 cell">
+<div class="grid-x grid-margin-x">
+    <div class="medium-12 large-12 cell-auto">
       <div class="media-object stack-for-small">
         <div class="media-object-section">
           <div class="thumbnail">
-            <img src="../assets/img/portfolio1.jpg">
+            <img src="../assets/img/brian-port.jpg">
           </div>
         </div>
         <div class="media-object-section">
           <h4 class="text-center">Brian Jones | Partner</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod</p>
+
 
         </div>
       </div>
     </div>
-    <div class="medium-12 large-12 cell">
+    <div class="medium-12 large-12 cell-auto">
       <div class="media-object stack-for-small">
         <div class="media-object-section">
           <div class="thumbnail">
-            <img src="../assets/img/portfolio2.jpg">
+            <img src="../assets/img/kevin-port.jpg">
           </div>
         </div>
         <div class="media-object-section">
           <h4 class="text-center">Kevin Thunder | Partner</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium error
             adipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod</p>
+
         </div>
       </div>
 
