--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -193,46 +193,4 @@
 </section>
 
 
-<!-- contact us -->
-
-<section id="contact" data-magellan-target="contact">
-  <div class="medium-12 cell text-center">
-    <h3 class="text-center">Contact Us</h3>
-    <hr>
-    <h4>Tell us more about your next project</h4>
-    <p>Providing proven expertise in structural concrete construction to Southern California</p>
-    <br>
-  </div>
-
-  <div class="grid-x grid-margin-x medium-margin-collapse">
-    <div class="medium-6 cell" id="map-area">
-
-      <!-- map area -->
-
-      <iframe src="https://snazzymaps.com/embed/11762" width="100%" height="400px" style="border:none;"></iframe>
-
-    </div>
-    <div class="medium-6 cell" id="contact-area">
-
-      <h4 class="text-center">Let's build together</h4>
-      <br>
-
-      <!-- form area -->
-      <label>
-        <input class="login-box-input" type="text" placeholder="Name">
-      </label>
-
-      <label>
-        <input class="login-box-input" type="text" placeholder="Company">
-      </label>
-      <label>
-        <input class="login-box-input" type="text" placeholder="Email">
-      </label>
-      <label>
-        <textarea placeholder="What can we do for your project?"     class="login-box-input"></textarea>
-      </label>
-
-      <input type="submit" class="button expanded" value="Submit Form">
-    </div>
-  </div>
-</section>
+  {{> contact }}
