--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,19 +2,29 @@
 
 <!-- home callout section showcase-->
 
-<section id="home" data-magellan-target="home">
-  <div class="showcase">
-    <div class="callout large primary">
-      <div class="row column text-center">
-        <h1>TJC Building The Future Today</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
-        <a href="#projects" class="button small" data-smooth-scroll>Projects</a>
-        <a href="#contact" class="button small" data-smooth-scroll>Contact</a>
-      </div>
-    </div>
-  </div>
-</section>
 
+
+
+<!-- orig nav menu -->
+
+
+
+      <!-- test nav menu -->
+<section id="home" data-magellan-target="home">
+
+      <div class="hero hero-bg-image">
+        <div class="hero-content">
+          <h1 class="hero-title">TJC Building The Future Today</h1>
+          <p class="hero-description hide-for-small-only">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor ante, varius eget lacinia porta, faucibus ut eros. Donec quis dui id felis pharetra fermentum.</p>
+          <div class="hero-ctas">
+            <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
+            <a href="#contact" class="hero-section-cta button" data-smooth-scroll>Contact</a>
+          </div>
+        </div>
+      </div>
+
+</section>
+  <!-- /test nav menu -->
 
 <!-- about us -->
 <section id="about" data-magellan-target="about">
