--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -2,14 +2,9 @@
 
 <!-- home callout section showcase-->
 
+<!-- nav menu -->
 
-
-
-<!-- orig nav menu -->
-
-
-
-      <!-- test nav menu -->
+      <!-- hero section -->
 <section id="home" data-magellan-target="home">
 
       <div class="hero hero-bg-image">
@@ -24,9 +19,9 @@
       </div>
 
 </section>
-  <!-- /test nav menu -->
+      <!-- /hero section -->
 
-<!-- about us -->
+<!-- about us section -->
 <section id="about" data-magellan-target="about">
 
   <div class="grid-x">
@@ -52,7 +47,7 @@
 </section>
 
 
-<!-- services -->
+<!-- services section -->
 <section id="services" data-magellan-target="services">
 <div class="grid-x grid-margin-x">
     <div class="medium-12 cell">
@@ -80,7 +75,7 @@
 
 </section>
 
-<!-- why us -->
+<!-- why us section -->
 <section class="why-us">
   <div class="grid-x">
     <div class="medium-12 cell">
@@ -120,17 +115,17 @@
   </div>
 </section>
 
-<!-- current projects -->
+<!-- current projects section -->
 
 <section id="projects" data-magellan-target="projects">
-
+<!-- main page gallery partial -->
   {{> main-page-gallery }}
 
 </section>
-<!-- End Projects Section-->
+<!-- /projects Section-->
 
 
-<!-- partners -->
+<!-- partners section -->
 <section class="partners">
   <div class="medium-12 cell">
     <h3 class="text-center">Our Partners</h3>
@@ -155,7 +150,7 @@
 </section>
 
 
-<!-- our team -->
+<!-- our team section -->
 
 <section id="team" data-magellan-target="team">
 
@@ -178,7 +173,6 @@
           <h4 class="text-center">Brian Jones | Partner</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
-
         </div>
       </div>
     </div>
@@ -196,11 +190,9 @@
 
         </div>
       </div>
-
     </div>
   </div>
-
 </section>
 
-
+<!-- contact section partial -->
   {{> contact }}
