--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
 
       <div class="hero hero-bg-image">
         <div class="hero-content">
-          <h1 class="hero-title">TJC Building The Future Today</h1>
+          <h1 class="hero-title">TJC Building The Future</h1>
           <p class="hero-description hide-for-small-only">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor ante, varius eget lacinia porta, faucibus ut eros. Donec quis dui id felis pharetra fermentum.</p>
           <div class="hero-ctas">
             <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
