bring in modal and images
bring in modal and images

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,22 +1,22 @@
 <!-- nav menu -->
 <!-- nav menu -->
 
-      <!-- hero section -->
+<!-- hero section -->
 <section id="home" data-magellan-target="home">
 
-      <div class="hero hero-bg-image">
-        <div class="hero-content">
-          <h1 class="hero-title">TJC Building The Future</h1>
-          <p class="hero-description hide-for-small-only">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor ante, varius eget lacinia porta, faucibus ut eros. Donec quis dui id felis pharetra fermentum.</p>
-          <div class="hero-ctas">
-            <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
-            <a href="#contact" class="hero-section-cta button" data-smooth-scroll>Contact</a>
-          </div>
-        </div>
+  <div class="hero hero-bg-image">
+    <div class="hero-content">
+      <h1 class="hero-title">TJC Building The Future</h1>
+      <p class="hero-description hide-for-small-only">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor ante, varius eget lacinia porta, faucibus ut eros. Donec quis dui id felis pharetra fermentum.</p>
+      <div class="hero-ctas">
+        <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
+        <a href="#contact" class="hero-section-cta button" data-smooth-scroll>Contact</a>
       </div>
+    </div>
+  </div>
 
 </section>
-      <!-- /hero section -->
+<!-- /hero section -->
 
 <!-- about us section -->
 <section id="about" data-magellan-target="about">
@@ -28,16 +28,19 @@
     </div>
   </div>
 
-<div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x">
     <div class="medium-6 large-4 cell">
       <h3>Building in Southern California since 1998</h3></div>
     <div class="medium-6 large-8 cell">
       <p>Founded by Kevin Thunder and Brian Jones, Thunder-Jones Contracting Group serves the southern California community with quality construction. TJC prides itself in friendly business practice, safe work zones, and its specialization in tilt-up concrete
         construction, cast-in-place walls and elevated decks, and slab on grade projects. With a combined 45 years of experience in the San Diego construction industry, Kevin and Brian have created a dynamic team to complete projects on time and above
-        standards.</p>
+        standards.
+      </p>
 
 
-      <p>TJC has an extensive history of performing all types of tilt-up and cast-in-place concrete in virtually every market segment imaginable. In the ever-changing world of the construction industry, TJC takes pride in the ability to train and retain qualified individuals. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt dolorum enim voluptate non iusto aut, quae, ex dolorem saepe nisi eligendi minima accusantium culpa eos, maxime voluptas aspernatur odio vero!our experiences and resources enable a heightened sense of safety, quality and production for each project. The team at TJC Contracting hopes to have an opportunity to work with you to accomplish your goals.</p>
+      <p>TJC has an extensive history of performing all types of tilt-up and cast-in-place concrete in virtually every market segment imaginable. In the ever-changing world of the construction industry, TJC takes pride in the ability to train and retain
+        qualified individuals. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt dolorum enim voluptate non iusto aut, quae, ex dolorem saepe nisi eligendi minima accusantium culpa eos, maxime voluptas aspernatur odio vero!our experiences
+        and resources enable a heightened sense of safety, quality and production for each project. The team at TJC Contracting hopes to have an opportunity to work with you to accomplish your goals.</p>
 
     </div>
   </div>
@@ -45,27 +48,30 @@
 
 <!-- services section -->
 <section id="services" data-magellan-target="services">
-<div class="grid-x grid-margin-x">
+  <div class="grid-x grid-margin-x">
     <div class="medium-12 cell">
       <h3 class="text-center">Our Services</h3>
       <hr>
       <h4 class="text-center">From hospitals to residential communites we have your projects covered</h4>
     </div>
   </div>
-<br>
+  <br>
 
-<div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x">
     <div class="medium-4 cell">
       <h3 class="text-center">Commercial</h3>
-        <p>Our portfolio of projects structures us as a leader in the hospitality industry. Our services include place and finish, formwork, foundations and total package solutions. With our ability to mobilize quickly and go wherever the project demands, our clients recognize our ability to exceed expectation and earn their repeat business..</p>
+      <p>Our portfolio of projects structures us as a leader in the hospitality industry. Our services include place and finish, formwork, foundations and total package solutions. With our ability to mobilize quickly and go wherever the project demands,
+        our clients recognize our ability to exceed expectation and earn their repeat business..</p>
     </div>
     <div class="medium-4 cell">
       <h3 class="text-center">Multi-Family Residential</h3>
-        <p>Our reputation for meeting the aggressive schedules of this market helps us transform new projects into revenue-generating spaces. We are experienced in providing various levels of service, from foundation packages to total package services. Our intensive knowledge of formwork systems allows for the most cost-effective construction planning, engineering options and design/build services in the market.</p>
+      <p>Our reputation for meeting the aggressive schedules of this market helps us transform new projects into revenue-generating spaces. We are experienced in providing various levels of service, from foundation packages to total package services. Our
+        intensive knowledge of formwork systems allows for the most cost-effective construction planning, engineering options and design/build services in the market.</p>
     </div>
     <div class="medium-4 cell">
       <h3 class="text-center">Institutional</h3>
-        <p>We have experience in healthcare facilities, including hospitals, laboratories, specialized facilities and nursing homes. With many projects revolving around active facilities, TJC completes each job with a focused dedication to safety, job quality and on-time scheduling. TJC comes prepared to each project to ensure a timely and efficient turn-around for our clients to continue serving our communities.</p>
+      <p>We have experience in healthcare facilities, including hospitals, laboratories, specialized facilities and nursing homes. With many projects revolving around active facilities, TJC completes each job with a focused dedication to safety, job quality
+        and on-time scheduling. TJC comes prepared to each project to ensure a timely and efficient turn-around for our clients to continue serving our communities.</p>
     </div>
   </div>
 
@@ -80,33 +86,33 @@
     </div>
   </div>
 
-<div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x">
     <div class="medium-4 cell">
       <h3 class="text-center">45 Years Experience</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
       <h3 class="text-center">Right Tools</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
       <h3 class="text-center">Expert Know How</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
   </div>
 
   <div class="grid-x grid-padding-x">
     <div class="medium-4 cell">
       <h3 class="text-center">Why Us?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
-    <h3 class="text-center">Industry Certified</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
+      <h3 class="text-center">Industry Certified</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
     <div class="medium-4 cell">
-    <h3 class="text-center">Good Business</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
+      <h3 class="text-center">Good Business</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos itaque, perferendis error fuga nulla sed.</p>
     </div>
   </div>
 </section>
@@ -114,7 +120,7 @@
 <!-- current projects section -->
 
 <section id="projects" data-magellan-target="projects">
-<!-- main page gallery partial -->
+  <!-- main page gallery partial -->
   {{> main-page-gallery }}
 
 </section>
@@ -155,7 +161,7 @@
     </div>
   </div>
 
-<div class="grid-x grid-margin-x">
+  <div class="grid-x grid-margin-x">
     <div class="medium-12 large-12 cell-auto">
       <div class="media-object stack-for-small">
         <div class="media-object-section">
@@ -165,7 +171,8 @@
         </div>
         <div class="media-object-section">
           <h4 class="text-center">Brian Jones | Partner</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corrupti pariatur sit, quaerat consequuntur placeat quod, et, adipisci aperiam voluptate dolorem consequatur excepturi ad! Expedita similique est laudantium praesentium erroradipisci
+            veniam, corporis pariatur! Ab tempore, iusto aut perferendis optio.</p>
 
         </div>
       </div>
@@ -174,7 +181,7 @@
       <div class="media-object stack-for-small">
         <div class="media-object-section">
           <div class="thumbnail">
-            <img src="../assets/img/kevin-port.jpg">
+            <img src="../assets/img/uncle_cropped.jpg">
           </div>
         </div>
         <div class="media-object-section">
@@ -189,4 +196,4 @@
 </section>
 
 <!-- contact section partial -->
-  {{> contact }}
+{{> contact }}
