--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -36,12 +36,32 @@
 <div class="project-thumbs">
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
-      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
-      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
-      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
-      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+
+      <div class="cell small-6 medium-3 auto" data-open="exampleModal1">
+        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      </div>
+
+      <div class="reveal" id="exampleModal1" data-reveal>
+        <img src="../assets/img/project-page-gallery/large/vue1_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <div class="cell small-6 medium-3 auto">
+        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      </div>
+
+      <div class="cell small-6 medium-3 auto">
+        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      </div>
+
+      <div class="cell small-6 medium-3 auto">
+        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      </div>
+
     </div>
-</div>
+  </div>
 </div>
 
 <!-- Project Description and Overview -->
