update to gallery and UI
update to gallery and UI

--- a/src/pages/project3_broad.html
+++ b/src/pages/project3_broad.html
@@ -36,12 +36,21 @@
 <div class="project-thumbs">
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
-      <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
+
+      <div class="cell small-6 medium-3 auto" data-open="bsModal1">
+        <img src="../assets/img/project-page-gallery/small/bs1_small.jpg" class="thumbnail" alt="">
+      </div>
+      <div class="reveal" id="bsModal1" data-reveal>
+        <img src="../assets/img/project-page-gallery/large/bs1_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+              <span aria-hidden="true">&times;</span>
+              </button>
+      </div>
       <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
       <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
       <div class="cell small-6 medium-3 auto"><img src="https://placehold.it/250x200" class="thumbnail" alt=""></div>
     </div>
-</div>
+  </div>
 </div>
 
 <!-- Project Description and Overview -->
@@ -69,7 +78,8 @@
     <div class="medium-6 large-8 cell">
       <div class="project-overview">
 
-        <p class="text-left">This location is one of San Diego's newest luxury residencies in Little Italy. The structural concrete for this project required 167,000 ft&sup2 cast-in-place construction for a 10 level mid-rise condominium building. Four level cast-in-place 218,000 sq foot mixed use project (parking, shopping, condos)</p>
+        <p class="text-left">This location is one of San Diego's newest luxury residencies in Little Italy. The structural concrete for this project required 167,000 ft&sup2 cast-in-place construction for a 10 level mid-rise condominium building. Four level cast-in-place
+          218,000 sq foot mixed use project (parking, shopping, condos)</p>
 
       </div>
     </div>
