--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -37,27 +37,46 @@
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
 
-      <div class="cell small-6 medium-3 auto" data-open="exampleModal1">
-        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
+        <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
       </div>
-
-      <div class="reveal" id="exampleModal1" data-reveal>
-        <img src="../assets/img/project-page-gallery/large/vue1_large.jpg" class="thumbnail">
+      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="spin-in" data-animation-out="spin-out">
+        <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
-          <span aria-hidden="true">&times;</span>
-        </button>
+              <span aria-hidden="true">&times;</span>
+            </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto">
-        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-open="thevueModal2">
+        <img src="../assets/img/project-page-gallery/small/thevue2_small.jpg" class="thumbnail" alt="">
+      </div>
+      <div class="reveal" id="thevueModal2" data-reveal>
+        <img src="../assets/img/project-page-gallery/large/thevue2_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
+          </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto">
-        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      <div class="cell small-6 medium-3 auto" data-open="thevueModal3">
+        <img src="../assets/img/project-page-gallery/small/thevue3_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="cell small-6 medium-3 auto">
-        <img src="../assets/img/project-page-gallery/small/vue1_small.jpg" class="thumbnail" alt="">
+      <div class="reveal" id="thevueModal3" data-reveal>
+        <img src="../assets/img/project-page-gallery/large/thevue3_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+
+      <div class="cell small-6 medium-3 auto" data-open="thevueModal4">
+        <img src="../assets/img/project-page-gallery/small/thevue4_small.jpg" class="thumbnail" alt="">
+      </div>
+
+      <div class="reveal" id="thevueModal4" data-reveal>
+        <img src="../assets/img/project-page-gallery/large/thevue4_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
+          </button>
       </div>
 
     </div>
