--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -40,7 +40,7 @@
       <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
         <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="spin-in" data-animation-out="spin-out">
+      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
               <span aria-hidden="true">&times;</span>
