--- a/src/pages/project1_thevue.html
+++ b/src/pages/project1_thevue.html
@@ -40,39 +40,39 @@
       <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
         <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="spin-in" data-animation-out="spin-out">
+      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
               <span aria-hidden="true">&times;</span>
             </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-open="thevueModal2">
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal2">
         <img src="../assets/img/project-page-gallery/small/thevue2_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal2" data-reveal>
+      <div class="reveal" id="thevueModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
           </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-open="thevueModal3">
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal3">
         <img src="../assets/img/project-page-gallery/small/thevue3_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="reveal" id="thevueModal3" data-reveal>
+      <div class="reveal" id="thevueModal3" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue3_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
           </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-open="thevueModal4">
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal4">
         <img src="../assets/img/project-page-gallery/small/thevue4_small.jpg" class="thumbnail" alt="">
       </div>
 
-      <div class="reveal" id="thevueModal4" data-reveal>
+      <div class="reveal" id="thevueModal4" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/thevue4_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
             <span aria-hidden="true">&times;</span>
