--- a/src/pages/project2_tc.html
+++ b/src/pages/project2_tc.html
@@ -37,40 +37,40 @@
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
 
-      <div class="cell small-6 medium-3 auto" data-open="tcModal1">
+      <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
         <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="tcModal1" data-reveal>
+      <div class="reveal" id="tcModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/tc1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-open="tcModal2">
+      <div class="cell small-6 medium-3 auto" data-toggle="tcModal2">
         <img src="../assets/img/project-page-gallery/small/tc2_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="tcModal2" data-reveal>
+      <div class="reveal" id="tcModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/tc2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-open="tcModal1">
+      <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
         <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="tcModal1" data-reveal>
+      <div class="reveal" id="tcModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/tc1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-open="tcModal1">
+      <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
         <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="tcModal1" data-reveal>
+      <div class="reveal" id="tcModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/tc1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
         <span aria-hidden="true">&times;</span>
