--- a/src/pages/project3_broad.html
+++ b/src/pages/project3_broad.html
@@ -37,10 +37,10 @@
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
 
-      <div class="cell small-6 medium-3 auto" data-open="bsModal1">
+      <div class="cell small-6 medium-3 auto" data-toggle="bsModal1">
         <img src="../assets/img/project-page-gallery/small/bs1_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="bsModal1" data-reveal>
+      <div class="reveal" id="bsModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/bs1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
               <span aria-hidden="true">&times;</span>
