hero title change

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,8 @@
 
   <div class="hero hero-bg-image">
     <div class="hero-content">
-      <h1 class="hero-title">TJC Building The Future</h1>
+      <h1 class="hero-title">Thunder Jones Contracting Group, Inc.</h1>
+      <h3 class="hero-title">Commercial and Structural Concrete</h3>
       <p class="hero-description hide-for-small-only">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor ante, varius eget lacinia porta, faucibus ut eros. Donec quis dui id felis pharetra fermentum.</p>
       <div class="hero-ctas">
         <a href="#projects" class="hero-section-cta button" data-smooth-scroll>Projects</a>
