--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,7 +24,7 @@
 
   <div class="grid-x">
     <div class="medium-12 cell">
-      <h3 class="text-center">Who We Are?</h3>
+      <h3 class="text-center"></h3>
       <hr>
     </div>
   </div>
