removing "our" from our services.  and remove sub-heading.  "hospitals"... blah blah blah
per email.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -51,9 +51,11 @@
 <section id="services" data-magellan-target="services">
   <div class="grid-x grid-margin-x">
     <div class="medium-12 cell">
-      <h3 class="text-center">Our Services</h3>
+      <h3 class="text-center">Services</h3>
       <hr>
+      <!--
       <h4 class="text-center">From hospitals to residential communites we have your projects covered</h4>
+      -->
     </div>
   </div>
   <br>
