project gallery update initial
project gallery update initial

--- a/src/pages/project2_tc.html
+++ b/src/pages/project2_tc.html
@@ -31,32 +31,44 @@
   </div>
 </div>
 
-
 <!-- lightbox thumb area with modal open 4 image thumbnail row-->
 <div class="project-thumbs">
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
 
+      <!-- thumb1 -->
       <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
         <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
       </div>
+
       <div class="reveal" id="tcModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/tc1_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
-        <span aria-hidden="true">&times;</span>
-        </button>
+          <span aria-hidden="true">&times;</span>
+          </button>
       </div>
-
+      <!-- thumb2 -->
       <div class="cell small-6 medium-3 auto" data-toggle="tcModal2">
         <img src="../assets/img/project-page-gallery/small/tc2_small.jpg" class="thumbnail" alt="">
       </div>
       <div class="reveal" id="tcModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
         <img src="../assets/img/project-page-gallery/large/tc2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
-        <span aria-hidden="true">&times;</span>
-        </button>
+          <span aria-hidden="true">&times;</span>
+          </button>
+      </div>
+      <!-- thumb3 -->
+      <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
+        <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
+      </div>
+      <div class="reveal" id="tcModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/tc1_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+          <span aria-hidden="true">&times;</span>
+          </button>
       </div>
 
+      <!-- thumb4 -->
       <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
         <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
       </div>
@@ -67,52 +79,35 @@
         </button>
       </div>
 
+    </div>
+  </div>
+</div>
+<!-- Project Description and Overview -->
+<section class="project">
 
-      <div class="cell small-6 medium-3 auto" data-toggle="tcModal1">
-        <img src="../assets/img/project-page-gallery/small/tc1_small.jpg" class="thumbnail" alt="">
+  <div class="grid-x">
+    <div class="medium-6 large-4 cell">
+      <div class="project-spec">
+
+        <ul class="no-bullet">
+          <li><i class="fa fa-user"></i>Client: <a href="https://www.destinationhotels.com/town-country">Town & Country Hotel</a></li>
+
+          <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
+
+          <li><i class="fa fa-arrows-alt"></i> Surface Area: 30,000 ft&sup2</li>
+
+          <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
+          <br>
+        </ul>
       </div>
-      <div class="reveal" id="tcModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/tc1_large.jpg" class="thumbnail">
+    </div>
 
-        <div class="cell small-6 medium-3 auto" data-open="tcModal1">
-          <img src="../assets/img/project-page-gallery/small/tc2_small.jpg" class="thumbnail" alt="">
-        </div>
-        <div class="reveal" id="tcModal1" data-reveal>
-          <img src="../assets/img/project-page-gallery/large/tc2_large.jpg" class="thumbnail">
+    <div class="medium-6 large-8 cell">
+      <div class="project-overview">
 
-          <button class="close-button" data-close aria-label="Close modal" type="button">
-        <span aria-hidden="true">&times;</span>
-        </button>
-        </div>
+        <p class="text-left">Located in the heart of San Diego's Mission Valley, this hotel is a local landmark. The structural concrete for this project required 30,000 ft&sup2 of mat foundation construction for the new exhibition hall expansion.</p>
 
       </div>
     </div>
-    <!-- Project Description and Overview -->
-    <section class="project">
-
-      <div class="grid-x">
-        <div class="medium-6 large-4 cell">
-          <div class="project-spec">
-
-            <ul class="no-bullet">
-              <li><i class="fa fa-user"></i>Client: <a href="https://www.destinationhotels.com/town-country">Town & Country Hotel</a></li>
-
-              <li><i class="fa fa-map-marker "></i> Location: San Diego, CA</li>
-
-              <li><i class="fa fa-arrows-alt"></i> Surface Area: 30,000 ft&sup2</li>
-
-              <li><i class="fa fa-calendar"></i> Year Completed: 2016</li>
-              <br>
-            </ul>
-          </div>
-        </div>
-
-        <div class="medium-6 large-8 cell">
-          <div class="project-overview">
-
-            <p class="text-left">Located in the heart of San Diego's Mission Valley, this hotel is a local landmark. The structural concrete for this project required 30,000 ft&sup2 of mat foundation construction for the new exhibition hall expansion.</p>
-
-          </div>
-        </div>
-      </div>
-    </section>
+  </div>
+</section>
