--- a/src/pages/project3_broad.html
+++ b/src/pages/project3_broad.html
@@ -37,12 +37,7 @@
   <div class="grid-container fluid">
     <div class="grid-x grid-margin-x">
 
-<<<<<<< HEAD
-      <div class="cell small-6 medium-3 auto" data-toggle="bsModal1">
-        <img src="../assets/img/project-page-gallery/small/bs1_small.jpg" class="thumbnail" alt="">
-      </div>
-      <div class="reveal" id="bsModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-=======
+      <!-- thumb1 -->
       <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
         <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
       </div>
@@ -52,37 +47,39 @@
               <span aria-hidden="true">&times;</span>
             </button>
       </div>
-
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
-        <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
+      <!-- thumb2 -->
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal2">
+        <img src="../assets/img/project-page-gallery/small/thevue2_small.jpg" class="thumbnail" alt="">
       </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
+      <div class="reveal" id="thevueModal2" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/thevue2_large.jpg" class="thumbnail">
         <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true">&times;</span>
+            </button>
+      </div>
+      <!-- thumb3 -->
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal3">
+        <img src="../assets/img/project-page-gallery/small/thevue3_small.jpg" class="thumbnail" alt="">
+      </div>
+
+      <div class="reveal" id="thevueModal3" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/thevue3_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
+            </button>
+      </div>
+      <!-- thumb4 -->
+      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal4">
+        <img src="../assets/img/project-page-gallery/small/thevue4_small.jpg" class="thumbnail" alt="">
+      </div>
+
+      <div class="reveal" id="thevueModal4" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
+        <img src="../assets/img/project-page-gallery/large/thevue4_large.jpg" class="thumbnail">
+        <button class="close-button" data-close aria-label="Close modal" type="button">
+            <span aria-hidden="true">&times;</span>
             </button>
       </div>
 
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
-        <img src="../assets/img/project-page-gallery/small/bs1_small.jpg" class="thumbnail" alt="">
-      </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
->>>>>>> origin/master
-        <img src="../assets/img/project-page-gallery/large/bs1_large.jpg" class="thumbnail">
-        <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-      </div>
-
-      <div class="cell small-6 medium-3 auto" data-toggle="thevueModal1">
-        <img src="../assets/img/project-page-gallery/small/thevue1_small.jpg" class="thumbnail" alt="">
-      </div>
-      <div class="reveal" id="thevueModal1" data-reveal data-close-on-click="true" data-animation-in="fade-in" data-animation-out="fade-out">
-        <img src="../assets/img/project-page-gallery/large/thevue1_large.jpg" class="thumbnail">
-        <button class="close-button" data-close aria-label="Close modal" type="button">
-              <span aria-hidden="true">&times;</span>
-            </button>
-      </div>
     </div>
   </div>
 </div>
